--- a/HTML/1_HTML Tags.html
+++ b/HTML/1_HTML Tags.html
@@ -127,6 +127,48 @@
     <div style="background-color: aqua;">This is my First Div</div>
 
     <span style="background-color: blue;">This is My First Span Tag</span>
+
+
+
+     <ul>
+        <li>
+            <p><a href="">A</a></p>
+        </li>
+        <li>
+            <p><a href="">B</a></p>
+        </li>
+        <li>
+            <p><a href="">C</a></p>
+        </li>
+        <li>
+            <p><a href="">D</a></p>
+        </li>
+        <li>
+            <p><a href="">E</a></p>
+        </li>
+        <li>
+            <p><a href="">F</a></p>
+        </li>
+        <li>
+            <p><a href="">G</a></p>
+        </li>
+    </ul>
+
+
+    <nav>
+        <ul></ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Contact</a></li>
+        <li><a href="">Login</a></li>
+        <li><a href="">Basic</a></li>
+    </nav>
+
+
+        <a href="mailto:njnirob2019@gmail.com">Email</a>
+        <a href="tel:01780581185">Call US</a>
+
+    
     
 </body>
 </html>
